--- a/.devcontainer/environment.yaml
+++ b/.devcontainer/environment.yaml
@@ -2,164 +2,125 @@ name: network_wrangler
 channels:
   - defaults
   - conda-forge
-  - https://repo.anaconda.com/pkgs/main
-  - https://repo.anaconda.com/pkgs/r
-  - https://repo.anaconda.com/pkgs/msys2
 dependencies:
-  - _libavif_api=1.3.0=h57928b3_2
-  - aom=3.9.1=he0c23c2_0
-  - asttokens=3.0.0=py310haa95532_0
-  - branca=0.8.1=pyhd8ed1ab_0
-  - brotli=1.1.0=h2466b09_3
-  - brotli-bin=1.1.0=h2466b09_3
-  - brotli-python=1.1.0=py310h9e98ed7_3
-  - bzip2=1.0.8=h2bbff1b_6
-  - ca-certificates=2025.8.3=h4c7d964_0
-  - cairo=1.18.4=he9e932c_0
-  - certifi=2025.8.3=py310haa95532_0
-  - cffi=1.17.1=py310ha8f682b_0
-  - charset-normalizer=3.4.3=pyhd8ed1ab_0
-  - colorama=0.4.6=py310haa95532_0
-  - comm=0.2.3=pyhe01879c_0
-  - contourpy=1.3.2=py310hc19bc0b_0
-  - cpython=3.10.18=py310hd8ed1ab_0
-  - cycler=0.12.1=pyhd8ed1ab_1
-  - dav1d=1.2.1=hcfcfb64_0
-  - debugpy=1.8.16=py310h699e580_0
-  - decorator=5.1.1=pyhd3eb1b0_0
-  - exceptiongroup=1.2.0=py310haa95532_0
-  - executing=0.8.3=pyhd3eb1b0_0
-  - expat=2.7.1=h8ddb27b_0
-  - folium=0.20.0=pyhd8ed1ab_0
-  - fontconfig=2.14.1=hb33846d_3
-  - fonttools=4.59.2=py310hdb0e946_0
-  - freeglut=3.4.0=h8a1e904_1
-  - freetype=2.13.3=h0620614_0
-  - fribidi=1.0.10=h8d14728_0
-  - graphite2=1.3.14=hac47afa_2
-  - h2=4.3.0=pyhcf101f3_0
-  - harfbuzz=10.2.0=he2f9f60_1
-  - hpack=4.1.0=pyhd8ed1ab_0
-  - hyperframe=6.1.0=pyhd8ed1ab_0
-  - icu=73.2=h63175ca_0
-  - idna=3.10=pyhd8ed1ab_1
-  - importlib-metadata=8.7.0=pyhe01879c_1
-  - ipykernel=6.30.1=pyh3521513_0
-  - ipython=8.37.0=pyha7b4d00_0
-  - jedi=0.19.2=py310haa95532_0
-  - jinja2=3.1.6=pyhd8ed1ab_0
-  - joblib=1.5.2=pyhd8ed1ab_0
-  - jpeg=9e=hcfcfb64_3
-  - jupyter_client=8.6.3=pyhd8ed1ab_1
-  - jupyter_core=5.8.1=pyh5737063_0
-  - kiwisolver=1.4.9=py310h1e1005b_1
-  - krb5=1.21.3=hdf4eb48_0
-  - lcms2=2.16=h62be587_1
-  - lerc=4.0.0=h6470a55_1
-  - libavif=1.3.0=he916da2_2
-  - libavif16=1.3.0=he916da2_2
-  - libblas=3.9.0=34_h5709861_mkl
-  - libbrotlicommon=1.1.0=h2466b09_3
-  - libbrotlidec=1.1.0=h2466b09_3
-  - libbrotlienc=1.1.0=h2466b09_3
-  - libcblas=3.9.0=34_h2a3cdd5_mkl
-  - libclang13=14.0.6=default_h8e68704_2
-  - libdeflate=1.22=h2466b09_0
-  - libffi=3.4.4=hd77b12b_1
-  - libglib=2.84.2=h405b238_0
-  - libhwloc=2.12.1=default_h88281d1_1000
-  - libiconv=1.18=hc1393d2_2
-  - libkrb5=1.21.3=h885b0b7_4
-  - liblapack=3.9.0=34_hf9ab0e9_mkl
-  - libpng=1.6.39=h8cc25b3_0
-  - libpq=17.4=h4a159e6_2
-  - libsodium=1.0.20=hc70643c_0
-  - libtiff=4.7.0=h404307b_0
-  - libwebp-base=1.6.0=h4d5522a_0
-  - libwinpthread=12.0.0.r4.gg4f2fc60ca=h57928b3_9
-  - libxml2=2.13.8=h866ff63_0
-  - libxslt=1.1.43=h25c3957_0
-  - llvm-openmp=20.1.8=hfa2b4ca_2
-  - lz4-c=1.9.4=hcfcfb64_0
-  - mapclassify=2.8.1=pyhd8ed1ab_1
-  - markupsafe=3.0.2=py310h38315fa_1
-  - matplotlib=3.10.5=py310h5588dad_0
-  - matplotlib-base=3.10.5=py310h43afe63_0
-  - matplotlib-inline=0.1.6=py310haa95532_0
-  - minizip=4.0.3=hb68bac4_0
-  - mkl=2024.2.2=h57928b3_16
-  - munkres=1.1.4=pyhd8ed1ab_1
-  - narwhals=1.31.0=py310haa95532_1
-  - nest-asyncio=1.6.0=pyhd8ed1ab_1
-  - networkx=3.4.2=pyh267e887_2
-  - numpy=2.2.6=py310h4987827_0
-  - openjpeg=2.5.2=h9b5d1b5_1
-  - openssl=3.5.2=h725018a_0
-  - packaging=25.0=pyh29332c3_1
-  - pandas=2.3.2=py310hed136d8_0
-  - parso=0.8.4=py310haa95532_0
-  - pcre2=10.42=h0ff8eda_1
-  - pickleshare=0.7.5=pyhd3eb1b0_1003
-  - pillow=11.3.0=py310hb328d1f_0
-  - pip=25.1=pyhc872135_2
-  - pixman=0.46.4=h5112557_1
-  - platformdirs=4.4.0=pyhcf101f3_0
-  - plotly=6.3.0=py310hbc747e5_0
-  - prompt-toolkit=3.0.43=py310haa95532_0
-  - psutil=7.0.0=py310h29418f3_1
-  - pure_eval=0.2.2=pyhd3eb1b0_0
-  - pycparser=2.22=pyh29332c3_1
-  - pygments=2.19.1=py310haa95532_0
-  - pyparsing=3.2.3=pyhe01879c_2
-  - pyside6=6.7.3=py310h28b127d_1
-  - pysocks=1.7.1=pyh09c184e_7
-  - python=3.10.18=h981015d_0
-  - python-dateutil=2.9.0.post0=pyhe01879c_2
-  - python-tzdata=2025.2=pyhd8ed1ab_0
-  - python_abi=3.10=2_cp310
-  - pytz=2025.2=pyhd8ed1ab_0
-  - pywin32=311=py310h282bd7d_0
-  - pyzmq=27.0.2=py310h535538e_2
-  - qtbase=6.7.3=hd088775_4
-  - qtdeclarative=6.7.3=h885b0b7_1
-  - qtshadertools=6.7.3=h885b0b7_1
-  - qtsvg=6.7.3=h9d4b640_1
-  - qttools=6.7.3=hcb596f7_1
-  - qtwebchannel=6.7.3=h885b0b7_1
-  - qtwebengine=6.7.3=h3869032_1
-  - qtwebsockets=6.7.3=h885b0b7_1
-  - rav1e=0.7.1=ha073cba_3
-  - requests=2.32.5=pyhd8ed1ab_0
-  - scikit-learn=1.7.1=py310h21054b0_0
-  - seaborn=0.13.2=py310haa95532_3
-  - setuptools=78.1.1=py310haa95532_0
-  - six=1.17.0=pyhe01879c_1
-  - sqlite=3.50.2=hda9a48d_1
-  - stack_data=0.2.0=pyhd3eb1b0_0
-  - svt-av1=3.1.2=hac47afa_0
-  - tbb=2021.13.0=h18a62a1_3
-  - threadpoolctl=3.6.0=pyhecae5ae_0
-  - tk=8.6.15=hf199647_0
-  - tornado=6.5.2=py310h29418f3_0
-  - traitlets=5.14.3=py310haa95532_0
-  - typing_extensions=4.15.0=py310haa95532_0
-  - tzdata=2025b=h04d1e81_0
-  - ucrt=10.0.22621.0=haa95532_0
-  - unicodedata2=16.0.0=py310ha8f682b_0
-  - urllib3=2.5.0=pyhd8ed1ab_0
-  - vc=14.3=h2df5915_10
-  - vc14_runtime=14.44.35208=h4927774_10
-  - vs2015_runtime=14.44.35208=ha6b5a95_10
-  - wcwidth=0.2.13=py310haa95532_0
-  - wheel=0.45.1=py310haa95532_0
-  - win_inet_pton=1.1.0=pyh7428d3b_8
-  - xyzservices=2025.4.0=pyhd8ed1ab_0
-  - xz=5.6.4=h4754444_1
-  - zeromq=4.3.5=ha9f60a1_7
-  - zipp=3.23.0=pyhd8ed1ab_0
-  - zlib=1.2.13=h8cc25b3_1
-  - zstandard=0.23.0=py310h29418f3_3
-  - zstd=1.5.6=h8880b57_0
+  # Core Python
+  - python=3.10.18
+  - pip
+  - setuptools
+  - wheel
+  
+  # Jupyter and IPython
+  - ipykernel
+  - ipython
+  - jupyter_client
+  - jupyter_core
+  - matplotlib-inline
+  
+  # Scientific computing
+  - numpy
+  - pandas
+  - scipy
+  - scikit-learn
+  - networkx
+  
+  # Plotting and visualization
+  - matplotlib
+  - seaborn
+  - plotly
+  - folium
+  - branca
+  
+  # Geospatial
+  - geopandas
+  - mapclassify
+  
+  # Web and networking
+  - requests
+  - urllib3
+  - charset-normalizer
+  - idna
+  
+  # Data handling
+  - h2
+  - hpack
+  - hyperframe
+  - packaging
+  - six
+  - python-dateutil
+  - pytz
+  - python-tzdata
+  - tzdata
+  - zipp
+  - importlib-metadata
+  
+  # Development tools
+  - debugpy
+  - decorator
+  - executing
+  - pure_eval
+  - stack_data
+  - traitlets
+  - comm
+  - nest-asyncio
+  - psutil
+  - tornado
+  - pyzmq
+  - platformdirs
+  
+  # Text processing
+  - jinja2
+  - markupsafe
+  - pygments
+  - prompt-toolkit
+  - wcwidth
+  - parso
+  - jedi
+  - pickleshare
+  
+  # Math and algorithms
+  - cycler
+  - kiwisolver
+  - munkres
+  - pyparsing
+  - threadpoolctl
+  - joblib
+  
+  # Compression and encoding
+  - brotli
+  - brotli-python
+  - zstd
+  - zstandard
+  - lz4-c
+  
+  # System libraries
+  - openssl
+  - sqlite
+  - tk
+  - libffi
+  - bzip2
+  - xz
+  - zlib
+  - ca-certificates
+  - certifi
+  
+  # Image processing
+  - pillow
+  - fonttools
+  - freetype
+  - libpng
+  - jpeg
+  - libtiff
+  - openjpeg
+  
+  # Optional GUI (may not work in headless container)
+  - qt-main
+  
+  # Typing and validation
+  - typing_extensions
+  - pycparser
+  - cffi
+  
+  # Pip packages
   - pip:
       - annotated-types==0.7.0
       - attrs==25.3.0
@@ -194,5 +155,5 @@ dependencies:
       - tabulate==0.9.0
       - toml==0.10.2
       - typeguard==4.4.4
-  - typing-inspect==0.9.0
-  - typing-inspection==0.4.1
+      - typing-inspect==0.9.0
+      - typing-inspection==0.4.1
