--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@ MANIFEST
 create_baseyear_network/validation_failure_cases.csv
 *.twbr
 create_baseyear_network/Notes_do_not_commit.md
+momo_workshop/output_OSM/*
